--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Mi página de prueba</title>
 
   <!-- Usa tu ID real en AMBAS líneas -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-C4NDLDD212"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-0DG7NFZQ1L"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
@@ -16,7 +16,7 @@
     gtag('set', 'debug_mode', true);
 
     // Configura GA4 (desactivo el page_view auto para hacerlo explícito)
-    gtag('config', 'G-C4NDLDD212', { send_page_view: false });
+    gtag('config', 'G-0DG7NFZQ1L', { send_page_view: false });
 
     // Disparo page_view manual (útil en SPAs y para verificar más claro)
     gtag('event', 'page_view', {
